# gee-el

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/imgui/: CMakeLists.txt
src/: ibuffer.cpp  ibuffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  sphere.cpp  texture.cpp  texture.h  varray.cpp  varray.h  vblayout.h  vbuffer.cpp  vbuffer.h
src/glsl/: fragment.glsl  vertex.glsl
